// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessoriesSearch view Renders correctly for accessories 1`] = `
<div>
  <div
    class="md:flex gap-x-4 mt-6 mb-4"
  >
    <div>
      <div
        class="w-auto min-w-fit max-w-xs relative"
      >
        <div
          class="grid grid-cols-2 items-end"
        />
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="inline-flex justify-between py-2 pr-1 border-b-2 border-brand-black text-left bg-white cursor-default"
          data-headlessui-state=""
          data-testid="button-listbox"
          id="headlessui-listbox-button-:r0:"
          type="button"
        >
          <span
            class="block truncate text-xl leading-7 font-semibold"
          >
            Alle Kategorien
          </span>
          <svg
            aria-hidden="true"
            class="-mr-1 ml-2 h-6 w-6 self-center"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9l-7 7-7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="ais-SearchBox ml-auto mt-4 md:mt-0"
    >
      <form
        action=""
        class="ais-SearchBox-form"
        novalidate=""
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input rounded-full border border-coreUI-text-tertiary px-6 py-2 w-full md:w-96 focus:outline-2 focus:outline-offset-2 focus:outline-primary/30 focus:border-brand-black"
          maxlength="512"
          placeholder="Finde Zubehör"
          spellcheck="false"
          type="search"
          value=""
        />
        <button
          class="ais-SearchBox-submit"
          title="Submit the search query"
          type="submit"
        >
          <svg
            class="ais-SearchBox-submitIcon -ml-6"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset hidden"
          hidden=""
          title="Clear the search query"
          type="reset"
        >
          <svg
            class="ais-SearchBox-resetIcon hidden"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator hidden"
          hidden=""
        >
          <svg
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
  </div>
  <div
    class="flex flex-row space-between gap-x-4 my-4"
  >
    <div
      class="w-1/2"
    >
      <div
        class="mt-4 text-coreUI-text-tertiary"
      >
        Wir haben leder 
        <span
          class="font-bold"
        >
          kein Produkte
        </span>
         gefunden.
      </div>
    </div>
    <div
      class="w-1/2 flex flex-row justify-end"
    >
      <div
        class="ais-SortBy chevron w-full md:w-48"
      >
        <select
          class="ais-SortBy-select rounded-full border border-coreUI-text-tertiary px-4 py-2 bg-white w-full"
        >
          <option
            class="ais-SortBy-option"
            value="products"
          >
            Am beliebtesten
          </option>
          <option
            class="ais-SortBy-option"
            value="products_most_recent"
          >
            Neue zuerst
          </option>
          <option
            class="ais-SortBy-option"
            value="products_price_asc"
          >
            Preis aufsteigend
          </option>
          <option
            class="ais-SortBy-option"
            value="products_price_desc"
          >
            Preis absteigend
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="grid gap-2 grid-cols-1 mb-8 md:grid-cols-2 xl:grid-cols-3"
  >
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
  </div>
  <div
    class="ais-Hits mb-8 ais-Hits--empty"
  >
    <ol
      class="ais-Hits-list grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
    />
  </div>
  <nav
    class="border-t border-coreUI-border flex items-center justify-between mb-8"
  >
    <div
      class="flex-1 flex justify-end mr-2"
    >
      <button
        aria-label="Previous Page"
        class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
        data-testid="pagination-previous"
        disabled=""
        title="Previous Page"
      >
        <svg
          aria-hidden="true"
          class="mr-1.5 h-5 w-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cursor-pointer w-12 h-10 pt-3.5 text-center font-bold text-coreUI-text-tertiary border-t-2  text-coreUI-text-primary border-black"
      data-testid="pagination-page-0"
    >
      1
    </div>
    <div
      class="flex-1 flex justify-start -mt-0.5 ml-2"
    >
      <button
        aria-label="Next Page"
        class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
        data-testid="pagination-next"
        disabled=""
        title="Next Page"
      >
        <svg
          aria-hidden="true"
          class="ml-1.5 h-5 w-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;

exports[`AccessoriesSearch view Renders correctly for other 1`] = `
<div>
  <div
    class="md:flex gap-x-4 mt-6 mb-4"
  >
    <div>
      <div
        class="w-auto min-w-fit max-w-xs relative"
      >
        <div
          class="grid grid-cols-2 items-end"
        />
        <button
          aria-expanded="false"
          aria-haspopup="true"
          class="inline-flex justify-between py-2 pr-1 border-b-2 border-brand-black text-left bg-white cursor-default"
          data-headlessui-state=""
          data-testid="button-listbox"
          id="headlessui-listbox-button-:r1:"
          type="button"
        >
          <span
            class="block truncate text-xl leading-7 font-semibold"
          >
            Alle Kategorien
          </span>
          <svg
            aria-hidden="true"
            class="-mr-1 ml-2 h-6 w-6 self-center"
            fill="none"
            stroke="currentColor"
            stroke-width="2"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 9l-7 7-7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="ais-SearchBox ml-auto mt-4 md:mt-0"
    >
      <form
        action=""
        class="ais-SearchBox-form"
        novalidate=""
      >
        <input
          autocapitalize="off"
          autocomplete="off"
          autocorrect="off"
          class="ais-SearchBox-input rounded-full border border-coreUI-text-tertiary px-6 py-2 w-full md:w-96 focus:outline-2 focus:outline-offset-2 focus:outline-primary/30 focus:border-brand-black"
          maxlength="512"
          placeholder="Finde Geschenke"
          spellcheck="false"
          type="search"
          value=""
        />
        <button
          class="ais-SearchBox-submit"
          title="Submit the search query"
          type="submit"
        >
          <svg
            class="ais-SearchBox-submitIcon -ml-6"
            height="10"
            viewBox="0 0 40 40"
            width="10"
          >
            <path
              d="M26.804 29.01c-2.832 2.34-6.465 3.746-10.426 3.746C7.333 32.756 0 25.424 0 16.378 0 7.333 7.333 0 16.378 0c9.046 0 16.378 7.333 16.378 16.378 0 3.96-1.406 7.594-3.746 10.426l10.534 10.534c.607.607.61 1.59-.004 2.202-.61.61-1.597.61-2.202.004L26.804 29.01zm-10.426.627c7.323 0 13.26-5.936 13.26-13.26 0-7.32-5.937-13.257-13.26-13.257C9.056 3.12 3.12 9.056 3.12 16.378c0 7.323 5.936 13.26 13.258 13.26z"
            />
          </svg>
        </button>
        <button
          class="ais-SearchBox-reset hidden"
          hidden=""
          title="Clear the search query"
          type="reset"
        >
          <svg
            class="ais-SearchBox-resetIcon hidden"
            height="10"
            viewBox="0 0 20 20"
            width="10"
          >
            <path
              d="M8.114 10L.944 2.83 0 1.885 1.886 0l.943.943L10 8.113l7.17-7.17.944-.943L20 1.886l-.943.943-7.17 7.17 7.17 7.17.943.944L18.114 20l-.943-.943-7.17-7.17-7.17 7.17-.944.943L0 18.114l.943-.943L8.113 10z"
            />
          </svg>
        </button>
        <span
          class="ais-SearchBox-loadingIndicator hidden"
          hidden=""
        >
          <svg
            class="ais-SearchBox-loadingIcon"
            height="16"
            stroke="#444"
            viewBox="0 0 38 38"
            width="16"
          >
            <g
              fill="none"
              fill-rule="evenodd"
            >
              <g
                stroke-width="2"
                transform="translate(1 1)"
              >
                <circle
                  cx="18"
                  cy="18"
                  r="18"
                  stroke-opacity=".5"
                />
                <path
                  d="M36 18c0-9.94-8.06-18-18-18"
                >
                  <animatetransform
                    attributeName="transform"
                    dur="1s"
                    from="0 18 18"
                    repeatCount="indefinite"
                    to="360 18 18"
                    type="rotate"
                  />
                </path>
              </g>
            </g>
          </svg>
        </span>
      </form>
    </div>
  </div>
  <div
    class="flex flex-row space-between gap-x-4 my-4"
  >
    <div
      class="w-1/2"
    >
      <div
        class="mt-4 text-coreUI-text-tertiary"
      >
        Wir haben leder 
        <span
          class="font-bold"
        >
          kein Produkte
        </span>
         gefunden.
      </div>
    </div>
    <div
      class="w-1/2 flex flex-row justify-end"
    >
      <div
        class="ais-SortBy chevron w-full md:w-48"
      >
        <select
          class="ais-SortBy-select rounded-full border border-coreUI-text-tertiary px-4 py-2 bg-white w-full"
        >
          <option
            class="ais-SortBy-option"
            value="products"
          >
            Am beliebtesten
          </option>
          <option
            class="ais-SortBy-option"
            value="products_most_recent"
          >
            Neue zuerst
          </option>
          <option
            class="ais-SortBy-option"
            value="products_price_asc"
          >
            Preis aufsteigend
          </option>
          <option
            class="ais-SortBy-option"
            value="products_price_desc"
          >
            Preis absteigend
          </option>
        </select>
      </div>
    </div>
  </div>
  <div
    class="grid gap-2 grid-cols-1 mb-8 md:grid-cols-2 xl:grid-cols-3"
  >
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
    <div
      class="relative flex pt-8 md:px-6"
    >
      <div
        class="flex justify-center items-center shrink-0 self-center relative w-36 h-36"
      >
        <div
          class="flex justify-center items-center rounded-full bg-coreUI-background-images w-36 h-36"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded w-2/5 h-3/5"
          />
        </div>
      </div>
      <div
        class="flex flex-col w-full justify-center pl-4"
      >
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-10"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-4"
          />
        </div>
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-20"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-24"
        />
        <div
          class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-12"
        />
        <div
          class="flex"
        >
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-8"
          />
          <div
            class="block bg-coreUI-text-tertiary rounded h-1.5 mr-1.5 mb-3 w-14"
          />
        </div>
      </div>
      <div
        class="absolute block left-20 w-3 h-full bg-gradient-to-r from-transparent via-white/70 to-transparent animate-swipe"
      />
    </div>
  </div>
  <div
    class="ais-Hits mb-8 ais-Hits--empty"
  >
    <ol
      class="ais-Hits-list grid gap-2 grid-cols-1 md:grid-cols-2 xl:grid-cols-3"
    />
  </div>
  <nav
    class="border-t border-coreUI-border flex items-center justify-between mb-8"
  >
    <div
      class="flex-1 flex justify-end mr-2"
    >
      <button
        aria-label="Previous Page"
        class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
        data-testid="pagination-previous"
        disabled=""
        title="Previous Page"
      >
        <svg
          aria-hidden="true"
          class="mr-1.5 h-5 w-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M7.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l2.293 2.293a1 1 0 010 1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
    <div
      class="cursor-pointer w-12 h-10 pt-3.5 text-center font-bold text-coreUI-text-tertiary border-t-2  text-coreUI-text-primary border-black"
      data-testid="pagination-page-0"
    >
      1
    </div>
    <div
      class="flex-1 flex justify-start -mt-0.5 ml-2"
    >
      <button
        aria-label="Next Page"
        class="border-t-2 border-transparent pt-4 pr-1 inline-flex items-center font-bold text-coreUI-text-tertiary"
        data-testid="pagination-next"
        disabled=""
        title="Next Page"
      >
        <svg
          aria-hidden="true"
          class="ml-1.5 h-5 w-5"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z"
            fill-rule="evenodd"
          />
        </svg>
      </button>
    </div>
  </nav>
</div>
`;
